# src/app/api/v1/payment-methods/route.ts
@@ -1,0 +1,7 @@
+import type { NextResponse } from "next/server";
+
+import { handlePaymentMethodsGet } from "@/services/payment-methods/handler";
+
+export const GET = async (): Promise<NextResponse> => {
+  return handlePaymentMethodsGet();
+};
