# src/app/api/v1/payment-methods/setup-intent/route.ts
@@ -1,0 +1,7 @@
+import type { NextResponse } from "next/server";
+
+import { handlePaymentMethodsSetupIntentPost } from "@/services/payment-methods/handler";
+
+export const POST = async (): Promise<NextResponse> => {
+  return handlePaymentMethodsSetupIntentPost();
+};
