# src/models/users.ts
@@ -4,6 +4,7 @@ export const userResponseSchema = z.object({
   id: z.string(),
   auth_user_id: z.string(),
   name: z.string(),
+  stripe_customer_id: z.string().nullable().optional(),
 });
 
 export const registerUserRequestSchema = z.object({
